# double-chest

./: README.md
api/: Cargo.toml
api/src/routes/: mod.rs
auth/: Cargo.toml  build.rs
auth/src/: jwt.rs  main.rs
auth/src/grpc/: token.rs
common/: Cargo.toml
common/src/: hash.rs  jwt.rs  lib.rs  utils.rs
common/src/db/: connection.rs  queries.rs  schema.rs
common/src/models/: file.rs  user.rs
core/: Cargo.toml  build.rs
core/src/: main.rs
core/src/middleware/: jwt.rs
core/src/routes/: auth.rs  mod.rs  storage.rs
proto/: upload.proto
storage/: Cargo.toml  build.rs
storage/src/: main.rs
storage/src/grpc/: upload.rs
web/: vite.config.ts
web/src/: App.tsx  index.css
web/src/components/core/: Logo.tsx
web/src/lib/: utils.ts
web/src/pages/: Register.tsx
