[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
common = { path = "../common" }
rusqlite = "0.38.0"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
serde = "1.0.228"
chrono = "0.4.42"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
dotenvy = "0.15.7"

[build-dependencies]
tonic-prost-build = "0.14.2"
