[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash", "std"] }
axum = "0.8.8"
dotenvy = "0.15.7"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = "0.38.0"
serde = "1.0.228"
tokio = "1.48.0"
tonic = "0.14.2"
