[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-macros = "0.5.0"
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
common = { path = "../common" }
chrono = "0.4.42"
dotenvy = "0.15.7"
axum-extra = { version = "0.12.5", features = ["multipart"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
