[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
rusqlite = "0.38.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
common = { path = "../common" }
chrono = "0.4.42"
serde = "1.0.228"

[build-dependencies]
tonic-prost-build = "0.14.2"
